--- a/Outlook/SendProcessNotificationAndStatus.xaml
+++ b/Outlook/SendProcessNotificationAndStatus.xaml
@@ -100,7 +100,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <TryCatch.Try>
-        <Sequence sap:VirtualizedContainerService.HintSize="526,537.333333333333" sap2010:WorkflowViewState.IdRef="Sequence_2">
+        <Sequence DisplayName="Sequence: Send process notification" sap:VirtualizedContainerService.HintSize="526,537.333333333333" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -108,7 +108,7 @@
           </sap:WorkflowViewStateService.ViewState>
           <If Condition="[in_ProcessStartFlag]" DisplayName="If: Process end notification" sap:VirtualizedContainerService.HintSize="484,445.333333333333" sap2010:WorkflowViewState.IdRef="If_1">
             <If.Then>
-              <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Sends exception email to the reqired recipients.&#xA;Below are the arguments which are used:&#xA;1.  in_RecipientsEmailList = Specify list of recipients.&#xA;2.  in_Subject = Specify email subject.&#xA;3.  in_Body = Specify email body.&#xA;" Body="[in_Body]" Cc="[in_CcEmailList]" DisplayName="Send Outlook Mail Message: Process end and status" sap:VirtualizedContainerService.HintSize="200,248" sap2010:WorkflowViewState.IdRef="SendOutlookMail_2" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[in_Subject]" To="[in_RecipientsEmailList]">
+              <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Sends exception email to the reqired recipients.&#xA;Below are the arguments which are used:&#xA;1.  in_RecipientsEmailList = Specify list of recipients.&#xA;2.  in_Subject = Specify email subject.&#xA;3.  in_Body = Specify email body.&#xA;" Body="[in_Body]" Cc="[in_CcEmailList]" DisplayName="Send Outlook Mail Message: Process end and status: Process start" sap:VirtualizedContainerService.HintSize="200,248" sap2010:WorkflowViewState.IdRef="SendOutlookMail_2" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[in_Subject]" To="[in_RecipientsEmailList]">
                 <ui:SendOutlookMail.Files>
                   <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4" />
                 </ui:SendOutlookMail.Files>
@@ -122,7 +122,7 @@
               </ui:SendOutlookMail>
             </If.Then>
             <If.Else>
-              <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="&#xA;1.  in_RecipientsEmailList = Specify list of recipients.&#xA;2.  in_Subject = Specify email subject.&#xA;3.  in_Body = Specify email body.&#xA;4.  in_ExceptionAttachmentPath = Specify exception screenshot path which needs to be attached to exception email" Body="[in_Body]" Cc="[in_CcEmailList]" DisplayName="Send Outlook Mail Message: Process end and status" sap:VirtualizedContainerService.HintSize="200,281.333333333333" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[in_Subject]" To="[in_RecipientsEmailList]">
+              <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" MailMessage="{x:Null}" ReplyTo="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="&#xA;1.  in_RecipientsEmailList = Specify list of recipients.&#xA;2.  in_Subject = Specify email subject.&#xA;3.  in_Body = Specify email body.&#xA;4.  in_ExceptionAttachmentPath = Specify exception screenshot path which needs to be attached to exception email" Body="[in_Body]" Cc="[in_CcEmailList]" DisplayName="Send Outlook Mail Message: Process end and status: Process end" sap:VirtualizedContainerService.HintSize="200,281.333333333333" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" Importance="Normal" IsBodyHtml="False" IsDraft="False" Sensitivity="Normal" Subject="[in_Subject]" To="[in_RecipientsEmailList]">
                 <ui:SendOutlookMail.Files>
                   <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
                     <InArgument x:TypeArguments="x:String">[in_ExceptionAttachmentPath]</InArgument>
